# shell-scripts

./: README.md
OCR/: ocr-clip.sh
development/: CCreateProject.sh  CMakeLists.txt
development/test/: CMakeLists.txt
development/test/src/: main.cpp
documentconverter/: pptx-killer.sh
ffmpeg/: nvencFolder.sh
homelab/: uploadMusic.sh  uploadMusicVideo.sh
markdown/: mdCombine.sh  postMdCombine.sh
